# src/api/controllers/inpe.js
@@ -2,16 +2,20 @@ const configs = require('../config/configs');
 const request = require('request');
 const xml2js = require('xml2js');
 
-const parser = new xml2js.Parser();
+const parser = new xml2js.Parser({ explicitArray: false });
 
 module.exports = (app) => {
 
     let Controller = {
         listaCidades: (req, res, next) => {
-            request(`${configs.EXTERNAL.INPE}/listaCidades${req.params.city?`?city=${req.params.city}`:''}`, (error, response, body) => {
+            request({
+                uri: `${configs.EXTERNAL.INPE}/listaCidades${req.params.city ? `?city=${req.params.city}` : ''}`,
+                encoding: 'latin1'
+            }, (error, response, body) => {
                 try {
                     parser.parseString(body, (err, data) => {
-                        res.status(response.statusCode).send(data);
+                        data.cidades.cidade = [].concat(data.cidades.cidade)
+                        res.status(response.statusCode).send(data.cidades);
                     });
                 } catch (e) {
                     res.status(500).send();
@@ -19,7 +23,10 @@ module.exports = (app) => {
             });
         },
         cidade: (req, res, next) => {
-            request(`${configs.EXTERNAL.INPE}/cidade/${req.params.cityCode}/estendida.xml`, (error, response, body) => {
+            request({
+                uri: `${configs.EXTERNAL.INPE}/cidade/${req.params.cityCode}/estendida.xml`,
+                encoding: 'latin1'
+            }, (error, response, body) => {
                 try {
                     parser.parseString(body, (err, data) => {
                         res.status(response.statusCode).send(data);
@@ -30,7 +37,10 @@ module.exports = (app) => {
             });
         },
         cidadePrevisao: (req, res, next) => {
-            request(`${configs.EXTERNAL.INPE}/cidade/${req.params.cityCode}/previsao.xml`, (error, response, body) => {
+            request({
+                uri: `${configs.EXTERNAL.INPE}/cidade/${req.params.cityCode}/previsao.xml`,
+                encoding: 'latin1'
+            }, (error, response, body) => {
                 try {
                     parser.parseString(body, (err, data) => {
                         res.status(response.statusCode).send(data);
@@ -43,4 +53,5 @@ module.exports = (app) => {
     }
 
     return Controller;
+
 }
