# src/api/models/users.js
@@ -1,7 +1,7 @@
 const mongoose = require('mongoose');
 
 module.exports = () => {
-    
+
     let schema = mongoose.Schema({
         name: {
             type: String
@@ -11,38 +11,20 @@ module.exports = () => {
             required: true,
             index: {
                 unique: true
-            }    
+            }
         },
         password: {
             type: String,
-            required: true 
+            required: true
         },
         mail: {
             type: String
         },
         city: {
-            type: Number
-        },
-        irrigations: [new mongoose.Schema({
-            status: {
-                type: Boolean,
-                default: false
-            },
-            name: {
-                type: String,
-                required: true
-            },
-            address: {
-                type: String
-            },
-            cep: {
-                type: String
-            },
-            city: {
-                type: Number,
-                required: true
-            }
-        })]
+            id: { type: Number, required: true },
+            nome: String,
+            uf: String
+        }
     });
 
     return mongoose.model('User', schema, 'users');
