# src/api/routes/irrigacao.js
@@ -7,10 +7,6 @@ module.exports = (app) => {
     var Controller = app.controllers.irrigacao;
 
     router.get('/', Controller.healthCheck);
-    router.get('/all', auth.authenticate, Controller.listMe);
-    router.post('/new', auth.authenticate, Controller.create);
-    router.put('/update', auth.authenticate, Controller.update);
-    router.delete('/delete/:id', auth.authenticate, Controller.delete);
     router.put('/controla/:estado', auth.authenticate, Controller.controla);
     router.get('/verifica', auth.authenticate, Controller.verifica);
 
